Modernize code style: Lombok @Data, @PathVariable cleanup, text blocks, .getFirst()
- Replace manual getters/setters with Lombok @Data on 3 @ConfigurationProperties
  classes (WosOptimizationProperties, DualReadGateProperties,
  PostgresReportingProjectionProperties)
- Add field-level @Getter/@Setter on ImportProcessingResult and WosParserRunSummary,
  keeping custom unmodifiable-list accessors manual
- Remove redundant @PathVariable name attributes in AdminGroupController (7) and
  UserViewController (6) where name matches variable
- Convert 3 scoring service getDescription() string concatenations to text blocks
- Replace .get(0) with .getFirst() across 6 files (Java 21 SequencedCollection)

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>